# Titanic-Kaggle-Competition

./: .gitignore  README.md  pyproject.toml
notebooks/: titanic_eda.ipynb  titanic_model.ipynb
src/: model.py  utils.py
