[tool.poetry]
name = "titanic-project"
version = "0.1.0"
description = "Titanic Kaggle competition - Machine Learning model"
authors = ["Dante <dante.larroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
